<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AuthenticationApp</string>
    <string name="welcome_title">Welcome!</string>
    <string name="welcome_subtitle">Please login or create an account to continue</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Create Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="app_logo">App Logo</string>
    <!-- Login Screen -->
    <string name="login_title">Welcome Back!</string>
    <string name="login_subtitle">Please sign in to your account</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
</resources>